Fix obtaining wl_surface from WId

f2f14df48616f31bee62d3f57d9f08278aa8888d ported from KWayland::Surface::fromQtWinId
to QWindow::fromWinId, but QWindow::fromWinId doesn't work on Wayland.

Instead copy the implementation from KWayland and use that

BUG: 496365
(cherry picked from commit d7d9c1bb4b3a1c5d65137334cb4e6472211c2a16)